# osu_map_download

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml  check.yml
bp-download/: Cargo.toml
bp-download/src/: main.rs
examples/: download.rs
map-download/: Cargo.toml
map-download/src/: core.rs  error.rs  unzip.rs  user.rs
src/: client.rs  core.rs  error.rs  lib.rs  session.rs  unzip.rs  user.rs  util.rs
