[package]
name = "osu_map_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "gzip", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5.6"
bytes= "1.1.0"
lazy_static = "1.4.0"
anyhow = "1.0.57"
thiserror = "1.0.31"
clap = { version = "3.1.18", features = [ "derive" ] }
directories = "4.0.1"
serde_json = "1.0.81"
futures-util = "0.3.21"
indicatif = "0.16.2"
