[package]
name = "osurs"
version = "0.1.0"
edition = "2021"
authors = ["HollisMeynell", "Avimitin"]
license = "MIT"
description = "An open source utilities library for interact with osu"
repository = "https://github.com/HollisMeynell/osu_map_download"
readme = "README.md"
keywords = ["osu"]

[lib]
name = "osurs"
path = "src/lib.rs"

[dependencies.osurs-map-download]
path = "map-download"
version = "0.1.0"

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "gzip", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5.6"
bytes= "1.1.0"
lazy_static = "1.4.0"
anyhow = "1.0.57"
thiserror = "1.0.31"
clap = { version = "3.1.18", features = [ "derive" ] }
directories = "4.0.1"
serde_json = "1.0.81"
futures-util = "0.3.21"
indicatif = "0.17.0"
rpassword = "7.0.0"

keyring = { version = "1.1.2", optional = true }

winreg = "0.10.0"
osu-db = "0.3.0"
[profile.release]
strip = true

[features]
pswd-store = ["dep:keyring"]
unzip = ["osurs-map-download/unzip"]
