[package]
name = "osurs-map-download"
version = "0.1.0"
edition = "2021"
authors = ["Avimitin <avimitin@gmail.com>", "HollisMeynell"]
description = "Library for downloading osu map"
repository = "https://github.com/HollisMeynell/osu_map_download"
license = "MIT"

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "gzip", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5.6"
bytes= "1.1.0"
lazy_static = "1.4.0"
anyhow = "1.0.57"
thiserror = "1.0.31"
clap = { version = "3.1.18", features = [ "derive" ] }
directories = "4.0.1"
serde_json = "1.0.81"
futures-util = "0.3.21"
indicatif = "0.16.2"
rpassword = "6.0"

zip = { version = "0.6.2", optional = true}
walkdir = "2.3.2"

keyring = { version = "1.1.2", optional = true }

[profile.release]
strip = true

[features]
pswd-store = ["dep:keyring"]
unzip = ["dep:zip"]
